--- a/css/style.css
+++ b/css/style.css
@@ -37,6 +37,7 @@ ul li a {
     border-left: 2px solid #98DEDE;
     padding: 0.5rem;
     font-size: 1.5rem;
+    transition: .3s;
 }
 
 ul li a:hover {
@@ -89,6 +90,12 @@ button {
     border-radius: 0.5rem;
     padding: .5rem 1rem;
     font-family: Georgia, 'Times New Roman', Times, serif;
+    transition: .3s;
+}
+
+button:hover {
+    background-color: #98DEDE;
+    border: 1px solid transparent;
 }
 
 footer {
