--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,2 +1,192 @@
 @import "./base/generales";
 @import "./components/header";
+@import "./components/footer";
+
+/* Estilo index.html */
+
+section.cards {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    gap: 2rem;
+    justify-items: center;
+    padding: 1rem;
+
+}
+
+@media screen and (max-width:768px) {
+    section.cards {
+        grid-template-columns: 1fr 1fr;
+    }
+}
+
+.cards,
+.libros {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    margin-bottom: 3rem;
+    gap: 2rem;
+    padding: .5rem;
+}
+
+.cards-article {
+    border: 1px solid $color-secundario;
+    border-radius: 0.5rem;
+    width: 150px;
+    display: flex;
+    flex-direction: column;
+    gap: .5rem;
+    align-items: center;
+    justify-content: flex-end;
+    padding: .5rem;
+
+    h4 {
+        font-size: 1.5rem;
+        margin: 0;
+        text-align: center;
+    }
+}
+
+/* Estilo libros.html */
+
+.sectionLibros {
+    display: flex;
+    justify-content: space-between;
+    gap: 1rem;
+    margin: auto;
+    padding-bottom: 3rem;
+    max-width: 80%;
+
+    aside {
+        background-color: $color-principal;
+        margin: 1rem;
+        padding: .5rem;
+        border-radius: .5rem;
+
+        ul {
+            list-style: none;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            gap: 1rem;
+            padding: .5rem;
+
+            li {
+                a {
+                    border-left: none;
+                    display: block;
+                    color: black;
+                    text-decoration: none;
+                    font-size: 1.5rem;
+                }
+
+                &:hover {
+                    text-decoration: underline;
+                }
+            }
+        }
+    }
+}
+
+@media screen and (max-width: 1230px) {
+    .sectionLibros {
+        flex-direction: column;
+    }
+}
+
+@media screen and (max-width: 800px) {
+    .sectionLibros {
+        flex-direction: column;
+    }
+
+}
+
+div.libros {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    justify-items: center;
+    gap: 3rem;
+    width: 80%;
+}
+
+@media screen and (max-width: 1230px) {
+    div.libros {
+        grid-template-columns: 1fr 1fr;
+        gap: 1rem;
+    }
+}
+
+@media screen and (max-width: 800px) {
+    div.libros {
+        grid-template-columns: 1fr;
+        gap: 1rem;
+    }
+
+}
+
+main {
+    .sectionLibros {
+        .libros {
+            nav {
+                li {
+                    display: inline !important;
+
+                    a {
+                        color: black;
+                        text-decoration: none;
+                        font-size: 2rem;
+
+                        &:hover {
+                            text-decoration: underline;
+                        }
+                    }
+                }
+            }
+        }
+    }
+}
+
+/* Estilo club.html */
+.sectionClub {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: auto;
+    max-width: 1200px;
+    padding-bottom: 3rem;
+    gap: 1rem;
+    img {
+        max-width: 90%;
+    }
+    p {
+        font-size: 1.5rem;
+        padding: 1rem;
+    }
+}
+
+/* Estilo nosotros.html */
+.construction {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    background-color: #98dedec0;
+    max-width: 600px;
+    width: 90%;
+    margin: auto;
+    border-radius: .5rem;
+    padding: 2rem;
+}
+
+/* Estilo contacto.html */
+.sectionForm form,
+.sectionClubUnirse {
+    margin: 1rem;
+    font-size: 1.5rem;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    align-items: stretch;
+    max-width: 600px;
+    margin: auto;
+    padding: 1.5rem;
+}
