--- a/css/style.css
+++ b/css/style.css
@@ -39,9 +39,9 @@ button {
   background-color: white;
   border: 1px solid black;
   border-radius: 0.5rem;
-  padding: .5rem 1rem;
+  padding: 0.5rem 1rem;
   font-family: Georgia, 'Times New Roman', Times, serif;
-  transition: .3s; }
+  transition: 0.3s; }
   button:hover {
     background-color: #98DEDE;
     border: 1px solid transparent; }
