--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,7 @@ body {
   font-family: 'Lancelot', cursive; }
 
 main {
-  min-height: 50vh; }
+  min-height: 60vh; }
 
 h1 {
   color: #BCAFA6;
@@ -236,16 +236,15 @@ main .sectionLibros .libros nav li {
     padding: 1rem; }
 
 /* Estilo nosotros.html */
-.construction {
-  display: flex;
-  flex-direction: column;
-  text-align: center;
+.nosotros {
+  font-size: larger;
   background-color: #98dedec0;
   max-width: 600px;
   width: 90%;
   margin: auto;
   border-radius: .5rem;
-  padding: 2rem; }
+  padding: 2rem;
+  margin-bottom: 3rem; }
 
 /* Estilo contacto.html */
 .sectionForm form,
