--- a/scss/main.scss
+++ b/scss/main.scss
@@ -165,16 +165,15 @@ main {
 }
 
 /* Estilo nosotros.html */
-.construction {
-    display: flex;
-    flex-direction: column;
-    text-align: center;
+.nosotros {
+    font-size: larger;
     background-color: #98dedec0;
     max-width: 600px;
     width: 90%;
     margin: auto;
     border-radius: .5rem;
     padding: 2rem;
+    margin-bottom: 3rem;
 }
 
 /* Estilo contacto.html */
